# horadus

./: .dockerignore  .editorconfig  .env.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.prod.secrets.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: README.md  settings.example.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
agents/automation/: README.md  agents-instructions.md  ba-instructions.md  daily-horadus-friction-summary.md  daily-sprint-health.md  horadus-sprint-autopilot.md  po-instructions.md  sa-instructions.md  security-instructions.md  weekly-backlog-triage.md
ai/: README.md
ai/eval/: README.md  gold_set.jsonl
ai/prompts/: monthly_report.md  retrospective_analysis.md  tier1_filter.md  tier2_classify.md  weekly_report.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_raw_item_embedding.py  0003_add_event_embedding_index.py  0004_add_api_usage_table.py  0005_add_processing_started_at.py  0006_add_trend_snapshot_retention_compression.py  0006_snapshot_retention.py  0007_evidence_decay_fields.py  0008_vector_index_strategy_profile.py  0009_sync_trend_definition_baseline.py  0010_add_embedding_lineage_columns.py  0011_add_report_grounding_metadata.py  0012_add_source_ingestion_watermark.py  0013_add_taxonomy_gap_queue.py  0014_add_trend_evidence_invalidation_lineage.py  0015_add_embedding_input_guardrail_metadata.py  0016_enforce_event_item_uniqueness.py  0017_add_trend_definition_versions.py  0018_add_dimension_check_constraints.py  0019_add_trend_evidence_factorization_inputs.py  0020_add_llm_replay_queue.py  0021_add_runtime_trend_id_uniqueness.py  0022_trend_evidence_active_unique.py  0023_add_event_claim_identity.py  0024_add_trend_restatement_ledger.py  0025_extend_taxonomy_gap_reasons_for_deterministic_mapping.py  0026_split_event_state_axes.py  0027_add_event_provenance_corroboration.py  0028_add_runtime_provenance_contract.py  0029_add_event_lineage.py  0030_add_trend_state_versions.py  0031_add_privileged_write_audits.py  0032_add_event_summary_field.py  0033_add_provisional_event_extraction_state.py  0034_add_coverage_snapshots.py  0035_add_source_provider_keys.py  0036_add_novelty_candidates.py  0037_add_event_adjudications.py  0038_add_canonical_entity_registry.py
archive/2026-03-10-sprint-3-close/: PROJECT_STATUS.md  README.md
archive/closed_tasks/: 2026-Q1.md  2026-Q2.md
artifacts/: report.md
codex/: README.md
codex/rules/: default.rules
config/quality/: code_shape.toml
config/security/: dependency_audit_allowlist.json  secret_scan_policy.json
config/sources/: gdelt_queries.yaml  rss_feeds.yaml  telegram_channels.yaml
config/trends/: africa-agri-supply-shift.yaml  ai-human-control-expansion.yaml  dollar-hegemony-erosion.yaml  elite-mass-polarization.yaml  eu-russia.yaml  fertility-decline-acceleration.yaml  global-infectious-threat-emergence.yaml  normative-deviance-normalization.yaml  parallel-enclaves-europe.yaml  protein-transition-alternative-sources.yaml  russia-turkey-conflict-escalation.yaml  south-america-agri-supply-shift.yaml  three-seas-bloc-consolidation.yaml  ukraine-security-frontier-model.yaml  us-china-war-escalation.yaml  us-internal-armed-conflict-risk.yaml
docker/api/: Dockerfile
docker/caddy/: Caddyfile
docker/postgres/: Dockerfile  init.sql
docker/worker/: Dockerfile
docs/: AGENT_RUNBOOK.md  API.md  ARCHITECTURE.md  ASSESSMENTS.md  CALIBRATION_RUNBOOK.md  DATA_MODEL.md  DEPLOYMENT.md  DOCS_FRESHNESS_OVERRIDES.json  EMBEDDING_MODEL_UPGRADE.md  ENVIRONMENT.md  GLOSSARY.md  LOW_FREQUENCY_MODE.md  POTENTIAL_ISSUES.md  PROMPT_EVAL_POLICY.md  RELEASING.md  RESPONSES_API_MIGRATION.md  SECRETS_BACKENDS.md  SECRETS_RUNBOOK.md  TAXONOMY_GAPS.md  TRACING.md  VECTOR_REVALIDATION.md
docs/adr/: 001-database-choice.md  002-llm-provider.md  003-probability-model.md  004-events-over-articles.md  005-two-tier-llm-processing.md  006-deterministic-scoring.md  007-environments-and-staging.md  008-degraded-llm-mode.md  009-agent-facing-horadus-cli.md  template.md
docs/rfc/: 001-agent-context-retrieval.md  README.md
ops/automations/: README.md  ids.txt
scripts/: agent_smoke_run.sh  assessment_publish_gate.py  backup_postgres.sh  check_agent_task_eligibility.sh  check_branch_name.sh  check_code_shape.py  check_dependency_audit.py  check_docs_freshness.py  check_migration_drift.sh  check_no_tracked_artifacts.sh  check_pr_closure_state.py  check_pr_review_gate.py  check_pr_task_scope.sh  check_required_hooks.sh  check_secret_baseline.py  check_task_start_preflight.sh  enforce_main_protection.sh  finish_task_pr.sh  install_horadus_cli_skill.sh  prepush_integration_gate.sh  promote_assessment_proposal.sh  release_gate_runtime.py  restore_postgres.sh  run_dependency_audit.sh  run_secret_scan.sh  run_unit_coverage_gate.sh  run_with_backpressure.sh  seed_trends.py  start_task_branch.sh  sync_automations.py  task_context_pack.sh  test_integration_docker.sh  validate_assessment_artifacts.py  verify_backups.sh
scripts/validate_assessment_artifacts_lib/: __init__.py  artifacts.py  constants.py  grounding.py  history.py  models.py  novelty.py  overlap.py  runner.py  schema_validation.py
src/: __init__.py  cli.py  cli_runtime.py
src/api/: deps.py  main.py
src/core/: api_key_manager.py  calibration.py  calibration_dashboard.py  cluster_drift.py  config.py  dashboard_export.py  docs_freshness.py  drift_alert_notifier.py  embedding_lineage.py  logging_setup.py  migration_parity.py  narrative_grounding.py  observability.py  release_gate_runtime.py  repo_workflow.py  risk.py  (+17 more)
tasks/: BACKLOG.md  COMPLETED.md  CURRENT_SPRINT.md
tests/: conftest.py
tools/: __init__.py
(+720 files in other folders)
