[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geopolitical-intel"
version = "0.1.0"
description = "Geopolitical intelligence platform for tracking news and trends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["geopolitics", "intelligence", "news", "trends", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",

    # Task Queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Data Collection
    "feedparser>=6.0.10",
    "trafilatura>=1.6.0",
    "telethon>=1.34.0",

    # LLM
    "openai>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",  # For TestClient

    # Code Quality
    "ruff>=0.2.0",
    "mypy>=1.8.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0",

    # Security
    "bandit[toml]>=1.7.0",

    # Type Stubs
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",
]

[project.urls]
Documentation = "https://github.com/yourname/geopolitical-intel#readme"
Issues = "https://github.com/yourname/geopolitical-intel/issues"
Source = "https://github.com/yourname/geopolitical-intel"

[project.scripts]
horadus = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require database/redis)",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
    "TC002",  # move third-party import into TYPE_CHECKING (FastAPI needs runtime inspection)
    "TC003",  # move stdlib import into TYPE_CHECKING (FastAPI needs runtime inspection)
    "DTZ003", # datetime.utcnow() - TODO: migrate to timezone-aware datetimes
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]  # Unused arguments OK in tests
"alembic/*" = ["ERA001"]  # Comments OK in migrations
"src/api/routes/*" = ["ARG001", "ARG002"]  # Unused arguments OK in stub endpoints

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "trafilatura.*",
    "telethon.*",
    "celery.*",
    "pgvector.*",
]
ignore_missing_imports = true

# =============================================================================
# Security: Bandit
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used - OK in development

# =============================================================================
# Commit Message: Commitizen
# =============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = false
